# ipsapply

./: .gitignore  README.md  meson.build
src/: config_ipsapply.h.in  ipsapply.c  options.c  options.h  util.c  util.h
